[package]
name = "questionnaire"
version = "0.1.0"
authors = ["Roland Mueller"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cfg-if = "1.0.0"
worker = "0.0.9"
serde_json = "1.0.81"
worker-kv = "0.5.1"
serde = { version = "1.0.137", features = ["derive"] }
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8.5"
handlebars = "4.2.2"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
